--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <div style="padding: 20px;">
             <img src="{% static "img/techops.png" %}" />
         </div>
-        <div class="panel callout">
+        <div class="panel bg-white">
             <h3 class="text-center">Department Head On-Call</h3>
             <div class="row">
                 <div class="large-4 columns">
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel callout">
+        <div class="panel bg-white">
             <h3 class="text-center">Desk Manager</h3>
             <div class="row">
                 <div class="large-4 columns">
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel callout">
+        <div class="panel bg-white">
             <h3 class="text-center">Desk Manager</h3>
             <div class="row">
                 <div class="large-4 columns">
@@ -51,30 +51,30 @@
     </div>
 
     <div class="large-8 columns text-center" style="font-size: 200%">
-        <div class="panel callout">
+        <div class="panel bg-white">
             <img src="{% static "img/netstat.png" %}" />
         </div>
         <div class="row">
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>13</h1>
                     <span>Radios Available for Check-Out</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>156</h1>
                     <span>Active DHCP Leases</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>37</h1>
                     <span>On-Shift TechOps Staffers</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>67</h1>
                     <span>Gaff Rolls Remaining</span>
                 </div>
@@ -82,25 +82,25 @@
         </div>
         <div class="row">
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>9000</h1>
                     <span>Twitch Stream Viewers</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>15746</h1>
                     <span>Attendees Checked-In</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>20000</h1>
                     <span>Attendees Registered</span>
                 </div>
             </div>
             <div class="large-3 columns">
-                <div class="panel callout">
+                <div class="panel bg-white">
                     <h1>5</h1>
                     <span>Gooooooolden Rings</span>
                 </div>
