--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 
     <div class="large-8 columns text-center" style="font-size: 200%">
         <div class="panel bg-white">
-            <img src="{% static "img/netstat.png" %}" />
+            <object style="width:100%; height: auto;" id="netstat-svg" data="{% static "img/graph.svg" %}" type="image/svg+xml"></object>
         </div>
         <div class="row">
             <div class="large-3 columns">
