Re-writing requirements form with Materialize.

--- a/requirements/templates/form.html
+++ b/requirements/templates/form.html
@@ -1,14 +1,21 @@
-{% extends "base.html" %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}TechOps Requirements Form{% endblock title %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}TechOps Requirements Form{% endblock title %}</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
+</head>
+<body>
 {% block content %}
-                <div class="row">
-                    <div class="large-12 columns">
-                        <h1>Tech Requirements Form</h1>
-                        <p>If you require any equipment or support for techops, please fill this form out to the best of your abilities. You can resubmit the form if your needs change.</p>
-                    </div>
-                </div>
-                {% crispy form %}
+    <h1>Tech Requirements Form</h1>
+
+        <p>
+            If you require any equipment or support for techops, please fill this form out to the best of your abilities. You can resubmit the form if your needs change.
+        </p>
+    {% crispy form %}
 {% endblock content %}
